# Fractal-node

./: .gitignore  Cargo.toml  README.md  docker-compose.langfuse.yml  m4_report.html  rust-toolchain.toml
.cursor/: scratchpad.md
crates/benchmarks/: Cargo.toml
crates/benchmarks/src/: lib.rs
crates/benchmarks/tests/: economic.rs  protocol.rs  verifier.rs
crates/cli/: Cargo.toml
crates/cli/src/: chain.rs  lib.rs  main.rs  reputation.rs
crates/cli/tests/: wallet_cli.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: fees.rs  hyperbft.rs  hyperbft_pipeline.rs  lib.rs  optimistic.rs  payload.rs  proof.rs  qc.rs  timeout.rs  validators.rs  vote.rs
crates/consensus/tests/: emission_finalize.rs  header_gas_evm.rs  m4_create_init_code.rs  rlvr_proof_root.rs  t1_panic_boundaries.rs
crates/core/: Cargo.toml
crates/core/src/: address.rs  block_finalize.rs  chain_economics.rs  consensus_misbehavior.rs  consensus_stake.rs  devnet_accounts.rs  error.rs  evm_engine.rs  lib.rs  merkle.rs  native_gas.rs  native_types.rs  state.rs  tx.rs  wallet_anchor.rs  wallet_batch_settle.rs  wallet_native.rs  wallet_provider.rs
crates/core/tests/: determinism.rs  emission_curve.rs  m12_consensus_delegation.rs  m13_permissionless_mainnet_economics.rs  m3_settle_claim.rs  m7_consensus_stake_native.rs  native_call_borsh_snapshots.rs  t1_panic_boundaries.rs  w14_wallet_provider_stake.rs  w29_wallet_emergency_stop.rs  w29_wallet_scoped_emergency_stop.rs  w29_wallet_task_module.rs  w6_d_wallet_task_receipt_anchor.rs  w6_wallet_batch_settle.rs  w6_wallet_mint_capability.rs  w6_wallet_reputation_snapshot.rs  w6_wallet_revoke_capability.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: bls.rs  ed25519_keys.rs  hash.rs  lib.rs
crates/faucet/: Cargo.toml
crates/faucet/src/: main.rs
crates/fractal-society/: Cargo.toml  README.md  WORK_PACKAGES.md
crates/fractal-society/examples/: commit_arbitrary_package.rs  compile_paper.rs  emit_golden_hashes.rs  emit_golden_package.rs  emit_golden_proof.rs  run_real_strategy.rs  run_research.rs
crates/fractal-society/src/: artifact.rs  canonical.rs  commit_service.rs  concept_index.rs  error.rs  exploration.rs  git_output.rs  kernel.rs  lib.rs  market_data.rs  offline_verify.rs  pipeline.rs  protocol.rs  research_package.rs  rigor.rs  signing.rs  simulation.rs  verifier.rs
crates/fractal-society/tests/: ar06_artifact_format.rs  ar08_provenance.rs  ar09_forecasting.rs  architecture_boundary.rs  canonical_hash.rs  kernel_determinism.rs  offline_verify.rs  pipeline.rs  pipeline_default.rs  pipeline_determinism.rs  pipeline_vertical_slice.rs  reference_adapter.rs  replay.rs  tamper_detection.rs  trading_accounting.rs  trading_baselines.rs  trading_constraints.rs  trading_costs.rs  trading_fill_model.rs  trading_funding.rs  trading_loss_stop.rs  trading_margin.rs  trading_orders.rs  trading_outage.rs  trading_public_evidence.rs  trading_scorecard.rs  trading_scoring.rs  trading_through_kernel.rs  wp_accounting_integrity.rs  wp_agent_manifest_freeze.rs  wp_appeals_flow.rs  wp_artifact_store.rs  wp_bar_dataset_store.rs  wp_bar_validation.rs  wp_baseline_correctness.rs  wp_canonical_roundtrip.rs  wp_chain_adapter_mock.rs  wp_chain_commitment.rs  wp_challenge_bond.rs  wp_challenge_window.rs  (+63 more)
crates/indexer/: Cargo.toml
crates/indexer-stub/: Cargo.toml
crates/indexer-stub/src/: indexer_mirror.rs  ledger_merge.rs  main.rs
crates/indexer-stub/tests/: reputation_snapshot.rs
crates/indexer/src/: db.rs  explorer_api.rs  graphql.rs  indexer_mirror.rs  ledger_merge.rs  lib.rs  main.rs  native_decode.rs  reputation.rs  rpc.rs  sync.rs  wallet_task_mirror.rs
crates/indexer/tests/: explorer_api.rs  graphql_smoke.rs
crates/light-client/: Cargo.toml
crates/light-client/src/: error.rs  head.rs  lib.rs  parse.rs  rpc.rs  verify.rs
crates/light-client/tests/: verify_head.rs
crates/masterchain/: Cargo.toml
crates/masterchain/src/: bft.rs  client.rs  ledger.rs  lib.rs  main.rs  network.rs  node.rs  rpc.rs
crates/masterchain/tests/: dedicated_bft.rs
crates/mvp-backend/: Cargo.toml
crates/mvp-backend/src/: lib.rs  main.rs  receipt_json.rs
crates/mvp-backend/testdata/: mvp_receipts_sample.json
crates/mvp-backend/tests/: receipt_json.rs
crates/node/: Cargo.toml
crates/node/src/: chain_snapshot.rs  eth_signed.rs  hyperbft_tick.rs  lib.rs  main.rs  metrics.rs  p2p.rs  prune.rs
crates/node/tests/: apply_synced_rpc_maps.rs  async_proof_after_sync.rs  chain_rocksdb_commit.rs  eip1559_raw_tx.rs  hyperbft_bft7_load.rs  hyperbft_bft7_torture.rs  hyperbft_multivalidator.rs  hyperbft_pipeline.rs  life_command_rpc.rs  m10_hyperbft_ordering.rs  m4_evm_receipt_success.rs  m7_c_validator_index.rs  m7_d2_validator_secret.rs  m7_d4_vote_pool.rs  m7_d5_gossipsub_votes.rs  m7_f_timeout_view_advance.rs  m7_stake_gate.rs  masterchain_zk.rs  owned_object_certificate_rpc.rs  proof_commitment_tx.rs  prune_after_proof.rs  quic_sync.rs  rlmf_attestation_rpc.rs  rlvr_route_trace.rs  routing_diagnostics.rs  shard_anchor.rs  shard_routing.rs  stwo_plonky2_pipeline.rs
crates/proof-aggregator/: Cargo.toml
crates/proof-aggregator/src/: aggregate.rs  lib.rs  plonky2_agg.rs  statement.rs  stwo.rs  submission.rs
crates/proof-condenser/: Cargo.toml
crates/proof-condenser/src/: artifact.rs  checkpoint_stwo.rs  lib.rs  persist.rs  riscv_trace.rs
crates/rlvr/: Cargo.toml
crates/rlvr/config/: default.yaml
crates/rlvr/src/: lib.rs  main.rs
crates/rlvr/tests/: adapter_export.rs  checkpoint_coverage.rs  train_fallback_cli.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: gateway.rs  lib.rs  masterchain_module.rs  module.rs  rpc_call_stats.rs
crates/sdk-rust/: Cargo.toml
crates/shard/: Cargo.toml
crates/storage/: Cargo.toml
crates/wallet/: Cargo.toml
fuzz/: Cargo.toml
fuzz/corpus/: README.md
fuzz/fuzz_targets/: da_commitment_roots.rs  da_share.rs  life_frac_conservation.rs  life_kin_split.rs  life_payout_conservation.rs  life_reaper_determinism.rs  payload_roots.rs  peer_message.rs  proof_envelope.rs  tx_decode.rs
tools/load-tps/: Cargo.toml  README.md
(+301 files in other folders)
