[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/wallet",
    "crates/crypto",
    "crates/consensus",
    "crates/network",
    "crates/evm",
    "crates/storage",
    "crates/mempool",
    "crates/rpc",
    "crates/node",
    "crates/cli",
    "crates/sdk-rust",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fractalwork/fractalchain"

[workspace.dependencies]
blake3 = "1.5"
borsh = { version = "1.5", features = ["derive"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = { version = "0.8", features = ["std", "std_rng"] }
sha2 = "0.10"
sha3 = "0.10"
thiserror = "1.0"
