[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/bft-wire",
    "crates/wallet",
    "crates/crypto",
    "crates/consensus",
    "crates/network",
    "crates/evm",
    "crates/storage",
    "crates/shard",
    "crates/mempool",
    "crates/eth-wire",
    "crates/rpc",
    "crates/node",
    "crates/cli",
    "crates/sdk-rust",
    "crates/mvp-backend",
    "crates/faucet",
    "crates/indexer-stub",
    "crates/benchmarks",
    "crates/fractal-society",
    "tools/load-tps",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fractalwork/fractalchain"

[workspace.dependencies]
blake3 = "1.5"
blst = "0.3"
borsh = { version = "1.5", features = ["derive"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = { version = "0.8", features = ["std", "std_rng"] }
sha2 = "0.10"
sha3 = "0.10"
reed-solomon-erasure = "6.0"
thiserror = "1.0"
hex = "0.4"
jsonrpsee = { version = "0.24", features = ["server", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal", "net"] }
libp2p = { version = "0.56", features = ["tokio", "quic", "request-response", "gossipsub", "macros"] }
async-trait = "0.1"
futures = "0.3"
http = "1.1"
revm = "38.0.0"
rlp = "0.5"
k256 = { version = "0.13", features = ["ecdsa"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
