[package]
name = "fractalchain-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
borsh = { version = "1.5", features = ["derive"] }
fractal-consensus = { path = "../crates/consensus" }
fractal-core = { path = "../crates/core" }
fractal-agent-life = { package = "agent-life", path = "../crates/agent-life" }
fractal-network = { path = "../crates/network" }
libfuzzer-sys = "0.4"
serde_json = "1"

[[bin]]
name = "tx_decode"
path = "fuzz_targets/tx_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "proof_envelope"
path = "fuzz_targets/proof_envelope.rs"
test = false
doc = false
bench = false

[[bin]]
name = "da_share"
path = "fuzz_targets/da_share.rs"
test = false
doc = false
bench = false

[[bin]]
name = "peer_message"
path = "fuzz_targets/peer_message.rs"
test = false
doc = false
bench = false

[[bin]]
name = "payload_roots"
path = "fuzz_targets/payload_roots.rs"
test = false
doc = false
bench = false

[[bin]]
name = "da_commitment_roots"
path = "fuzz_targets/da_commitment_roots.rs"
test = false
doc = false
bench = false

[[bin]]
name = "life_reaper_determinism"
path = "fuzz_targets/life_reaper_determinism.rs"
test = false
doc = false
bench = false

[[bin]]
name = "life_frac_conservation"
path = "fuzz_targets/life_frac_conservation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "life_kin_split"
path = "fuzz_targets/life_kin_split.rs"
test = false
doc = false
bench = false

[[bin]]
name = "life_payout_conservation"
path = "fuzz_targets/life_payout_conservation.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
