[package]
name = "fractal-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FractalWork protocol benchmark harnesses"

[lib]
name = "fractal_bench"
path = "src/lib.rs"

[[bin]]
name = "fractal-economic-bench"
path = "src/bin/economic.rs"

[[bin]]
name = "fractal-verifier-bench"
path = "src/bin/verifier.rs"

[[bin]]
name = "fractal-protocol-bench"
path = "src/bin/protocol.rs"

[[bin]]
name = "fractal-baseline-bench"
path = "src/bin/baseline.rs"

[[bin]]
name = "fractal-proof-ingestion-bench"
path = "src/bin/proof_ingestion.rs"

[dependencies]
borsh.workspace = true
fractal-consensus = { path = "../consensus" }
fractal-core = { path = "../core" }
fractal-crypto = { path = "../crypto" }
fractal-evm = { path = "../evm" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
