[package]
name = "fractal-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FractalWork agent wallet reference CLI (W6 slice; offline policy + capability ops)"

[lib]
path = "src/lib.rs"

[[bin]]
name = "fractal-wallet-cli"
path = "src/main.rs"

[dependencies]
borsh.workspace = true
ed25519-dalek.workspace = true
fractal-wallet = { path = "../wallet" }
hex.workspace = true
rand.workspace = true
serde_json.workspace = true
