[package]
name = "fractal-consensus"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
dev-digest = []

[dependencies]
borsh.workspace = true
fractal-core = { path = "../core" }
fractal-evm = { path = "../evm" }
fractal-crypto = { path = "../crypto" }
qp-plonky2-verifier = { version = "1.5.1", features = ["std"] }
reed-solomon-erasure.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest = "1.6"
