[package]
name = "fractal-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blst.workspace = true
borsh.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
sha3.workspace = true
thiserror.workspace = true

[dev-dependencies]
rand.workspace = true
