[package]
name = "fractal-society"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
blake3.workspace = true
borsh.workspace = true
async-trait.workspace = true
tokio.workspace = true
futures.workspace = true
hex.workspace = true
chrono = { version = "0.4", features = ["serde"] }

# Domain-specific dependencies (optional until used)
hyperliquid = { optional = true, version = "0.1" }

[dev-dependencies]
rand.workspace = true

[features]
default = []
trading = ["dep:hyperliquid"]
