[package]
name = "fractal-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PRD §14.4 / §19: native event indexer with GraphQL (subgraph-class operator surface)"

[[bin]]
name = "fractal-indexer"
path = "src/main.rs"

[dependencies]
async-graphql = "7.0"
async-graphql-axum = "7.0"
axum = "0.8"
borsh.workspace = true
fractal-core = { path = "../core", features = ["wallet"] }
fractal-crypto = { path = "../crypto" }
fractal-wallet = { path = "../wallet" }
hex.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync", "signal", "net"] }
tower-http = { workspace = true, features = ["cors"] }
ureq = { version = "2.10", default-features = false, features = ["json"] }

[dev-dependencies]
async-graphql = "7.0"
tempfile = "3.14"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tower = { version = "0.5", features = ["util"] }
