[package]
name = "fractal-node"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
borsh.workspace = true
k256.workspace = true
rlp.workspace = true
fractal-consensus = { path = "../consensus" }
fractal-core = { path = "../core" }
fractal-eth-wire = { path = "../eth-wire" }
fractal-evm = { path = "../evm" }
fractal-crypto = { path = "../crypto" }
fractal-mempool = { path = "../mempool" }
fractal-network = { path = "../network" }
fractal-rpc = { path = "../rpc" }
fractal-rlvr = { path = "../rlvr" }
fractal-shard = { path = "../shard" }
fractal-storage = { path = "../storage" }
futures.workspace = true
hex.workspace = true
libp2p.workspace = true
thiserror.workspace = true
tokio.workspace = true
