[package]
name = "fractal-proof-condenser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Async STWO/RISC-V proof condenser hooks (PRD §7.8) — non-blocking background jobs."

[dependencies]
blake3.workspace = true
borsh.workspace = true
fractal-consensus = { path = "../consensus" }
fractal-core = { path = "../core" }
fractal-crypto = { path = "../crypto" }
fractal-storage = { path = "../storage" }
hex.workspace = true
itertools = { version = "0.12", default-features = false, features = ["use_std"] }
num-traits = { version = "0.2", default-features = false, features = ["std"] }
serde_json.workspace = true
# `parallel` enables Rayon inside vendored `stwo` (faster on multi-core hosts, including riscv64).
stwo = { version = "2.2", features = ["prover", "std", "parallel"] }
stwo-constraint-framework = { version = "2.2", features = ["prover", "std"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
