[package]
name = "fractal-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
borsh.workspace = true
fractal-core = { path = "../core" }
fractal-consensus = { path = "../consensus" }
fractal-crypto = { path = "../crypto" }
hex.workspace = true
jsonrpsee.workspace = true
serde.workspace = true
serde_json.workspace = true
rlp.workspace = true
tokio.workspace = true
