[package]
name = "fractal-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
borsh.workspace = true
fractal-core = { path = "../core" }
fractal-crypto = { path = "../crypto" }
fractal-wallet = { path = "../wallet" }

[dev-dependencies]
blake3.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
