[package]
name = "fractal-shard"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shard routing and masterchain wire types (PRD v0.2 Track B / M10)."

[dependencies]
borsh.workspace = true
fractal-consensus = { path = "../consensus" }
fractal-core = { path = "../core" }
fractal-crypto = { path = "../crypto" }
hex.workspace = true
thiserror.workspace = true
